# cs

./: .gitignore  AGENTS.md  README.md  chat.py  db.py  justfile  main.py  pyproject.toml
db/: __init__.py  conversation.py  user.py
embedding/: mock.py
src/cs/: __init__.py
src/cs/ai/: __init__.py  gemini_client.py
src/cs/chat/: __init__.py  chat_app.py  services.py
src/cs/cli/: __init__.py  chat_cli.py
src/cs/config/: __init__.py  settings.py
src/cs/database/: __init__.py  base.py
src/cs/database/models/: __init__.py  entities.py
src/cs/database/repositories/: __init__.py  conversation_repo.py
src/cs/tools/: __init__.py  base_tool.py  weather.py
tools/: weather.py
