[project]
name = "cs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.13",
    "google-genai>=1.20.0",
    "google-generativeai>=0.8.5",
    "requests>=2.32.4",
]

[tool.pyright]
typeCheckingMode = "off"
